--- a/MyReporter.html
+++ b/MyReporter.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Mar 15, 2024 10:24:40 AM</span></a>
+<a href="#"><span class="badge badge-primary">Mar 15, 2024 10:31:13 PM</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">openApp was created...</p>
             <p class="text-sm">
-              <span>10:24:40 AM</span> / <span>00:00:00:528</span>
+              <span>10:31:13 PM</span> / <span>00:00:00:652</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">openApp was created...</h5>
-<span class='badge badge-success'>03.15.2024 10:24:40 AM</span>
-<span class='badge badge-danger'>03.15.2024 10:24:41 AM</span>
-<span class='badge badge-default'>00:00:00:528</span>
+<span class='badge badge-success'>03.15.2024 10:31:13 PM</span>
+<span class='badge badge-danger'>03.15.2024 10:31:14 PM</span>
+<span class='badge badge-default'>00:00:00:652</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -105,7 +105,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:24:41 AM</td>
+        <td>10:31:14 PM</td>
         <td>
           openApp PASSED!
         </td>
@@ -122,7 +122,7 @@
           <div class="test-detail">
             <p class="name">registration was created...</p>
             <p class="text-sm">
-              <span>10:24:41 AM</span> / <span>00:00:02:618</span>
+              <span>10:31:14 PM</span> / <span>00:00:02:801</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -131,9 +131,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">registration was created...</h5>
-<span class='badge badge-success'>03.15.2024 10:24:41 AM</span>
-<span class='badge badge-danger'>03.15.2024 10:24:43 AM</span>
-<span class='badge badge-default'>00:00:02:618</span>
+<span class='badge badge-success'>03.15.2024 10:31:14 PM</span>
+<span class='badge badge-danger'>03.15.2024 10:31:17 PM</span>
+<span class='badge badge-default'>00:00:02:801</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -146,7 +146,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:24:43 AM</td>
+        <td>10:31:17 PM</td>
         <td>
           registration PASSED!
         </td>
@@ -163,7 +163,7 @@
           <div class="test-detail">
             <p class="name">loginIncorrectPW was created...</p>
             <p class="text-sm">
-              <span>10:24:43 AM</span> / <span>00:00:02:484</span>
+              <span>10:31:17 PM</span> / <span>00:00:03:279</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -172,9 +172,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">loginIncorrectPW was created...</h5>
-<span class='badge badge-success'>03.15.2024 10:24:43 AM</span>
-<span class='badge badge-danger'>03.15.2024 10:24:46 AM</span>
-<span class='badge badge-default'>00:00:02:484</span>
+<span class='badge badge-success'>03.15.2024 10:31:17 PM</span>
+<span class='badge badge-danger'>03.15.2024 10:31:20 PM</span>
+<span class='badge badge-default'>00:00:03:279</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -187,7 +187,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:24:46 AM</td>
+        <td>10:31:20 PM</td>
         <td>
           loginIncorrectPW PASSED!
         </td>
@@ -204,7 +204,7 @@
           <div class="test-detail">
             <p class="name">loginBlankPW was created...</p>
             <p class="text-sm">
-              <span>10:24:46 AM</span> / <span>00:00:01:360</span>
+              <span>10:31:20 PM</span> / <span>00:00:01:317</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -213,9 +213,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">loginBlankPW was created...</h5>
-<span class='badge badge-success'>03.15.2024 10:24:46 AM</span>
-<span class='badge badge-danger'>03.15.2024 10:24:47 AM</span>
-<span class='badge badge-default'>00:00:01:360</span>
+<span class='badge badge-success'>03.15.2024 10:31:20 PM</span>
+<span class='badge badge-danger'>03.15.2024 10:31:21 PM</span>
+<span class='badge badge-default'>00:00:01:317</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=4</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -228,7 +228,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:24:47 AM</td>
+        <td>10:31:21 PM</td>
         <td>
           loginBlankPW PASSED!
         </td>
@@ -245,7 +245,7 @@
           <div class="test-detail">
             <p class="name">loginUnregisteredEmail was created...</p>
             <p class="text-sm">
-              <span>10:24:47 AM</span> / <span>00:00:02:479</span>
+              <span>10:31:21 PM</span> / <span>00:00:02:632</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -254,9 +254,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">loginUnregisteredEmail was created...</h5>
-<span class='badge badge-success'>03.15.2024 10:24:47 AM</span>
-<span class='badge badge-danger'>03.15.2024 10:24:50 AM</span>
-<span class='badge badge-default'>00:00:02:479</span>
+<span class='badge badge-success'>03.15.2024 10:31:21 PM</span>
+<span class='badge badge-danger'>03.15.2024 10:31:24 PM</span>
+<span class='badge badge-default'>00:00:02:632</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=5</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -269,7 +269,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:24:50 AM</td>
+        <td>10:31:24 PM</td>
         <td>
           loginUnregisteredEmail PASSED!
         </td>
@@ -286,7 +286,7 @@
           <div class="test-detail">
             <p class="name">loginBlankEmail was created...</p>
             <p class="text-sm">
-              <span>10:24:50 AM</span> / <span>00:00:01:182</span>
+              <span>10:31:24 PM</span> / <span>00:00:01:255</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -295,9 +295,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">loginBlankEmail was created...</h5>
-<span class='badge badge-success'>03.15.2024 10:24:50 AM</span>
-<span class='badge badge-danger'>03.15.2024 10:24:51 AM</span>
-<span class='badge badge-default'>00:00:01:182</span>
+<span class='badge badge-success'>03.15.2024 10:31:24 PM</span>
+<span class='badge badge-danger'>03.15.2024 10:31:25 PM</span>
+<span class='badge badge-default'>00:00:01:255</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=6</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -310,7 +310,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:24:51 AM</td>
+        <td>10:31:25 PM</td>
         <td>
           loginBlankEmail PASSED!
         </td>
@@ -327,7 +327,7 @@
           <div class="test-detail">
             <p class="name">searchProduct was created...</p>
             <p class="text-sm">
-              <span>10:24:51 AM</span> / <span>00:00:01:629</span>
+              <span>10:31:25 PM</span> / <span>00:00:01:963</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -336,9 +336,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">searchProduct was created...</h5>
-<span class='badge badge-success'>03.15.2024 10:24:51 AM</span>
-<span class='badge badge-danger'>03.15.2024 10:24:53 AM</span>
-<span class='badge badge-default'>00:00:01:629</span>
+<span class='badge badge-success'>03.15.2024 10:31:25 PM</span>
+<span class='badge badge-danger'>03.15.2024 10:31:27 PM</span>
+<span class='badge badge-default'>00:00:01:963</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=7</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -351,7 +351,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:24:53 AM</td>
+        <td>10:31:27 PM</td>
         <td>
           searchProduct PASSED!
         </td>
@@ -368,7 +368,7 @@
           <div class="test-detail">
             <p class="name">addToCart was created...</p>
             <p class="text-sm">
-              <span>10:24:53 AM</span> / <span>00:00:04:721</span>
+              <span>10:31:27 PM</span> / <span>00:00:05:037</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -377,9 +377,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">addToCart was created...</h5>
-<span class='badge badge-success'>03.15.2024 10:24:53 AM</span>
-<span class='badge badge-danger'>03.15.2024 10:24:57 AM</span>
-<span class='badge badge-default'>00:00:04:721</span>
+<span class='badge badge-success'>03.15.2024 10:31:27 PM</span>
+<span class='badge badge-danger'>03.15.2024 10:31:32 PM</span>
+<span class='badge badge-default'>00:00:05:037</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=8</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -392,7 +392,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:24:57 AM</td>
+        <td>10:31:32 PM</td>
         <td>
           addToCart PASSED!
         </td>
@@ -409,7 +409,7 @@
           <div class="test-detail">
             <p class="name">closeApp was created...</p>
             <p class="text-sm">
-              <span>10:24:57 AM</span> / <span>00:00:00:150</span>
+              <span>10:31:32 PM</span> / <span>00:00:00:178</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -418,9 +418,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">closeApp was created...</h5>
-<span class='badge badge-success'>03.15.2024 10:24:57 AM</span>
-<span class='badge badge-danger'>03.15.2024 10:24:57 AM</span>
-<span class='badge badge-default'>00:00:00:150</span>
+<span class='badge badge-success'>03.15.2024 10:31:32 PM</span>
+<span class='badge badge-danger'>03.15.2024 10:31:32 PM</span>
+<span class='badge badge-default'>00:00:00:178</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=9</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -433,7 +433,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:24:57 AM</td>
+        <td>10:31:32 PM</td>
         <td>
           closeApp PASSED!
         </td>
@@ -457,13 +457,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Mar 15, 2024 10:24:40 AM</h3>
+<h3>Mar 15, 2024 10:31:13 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Mar 15, 2024 10:24:57 AM</h3>
+<h3>Mar 15, 2024 10:31:32 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -533,7 +533,7 @@
 </div></div>
 <script>
 var timeline = {
-"openApp was created...":0.528,"registration was created...":2.618,"loginIncorrectPW was created...":2.484,"loginBlankPW was created...":1.36,"loginUnregisteredEmail was created...":2.479,"loginBlankEmail was created...":1.182,"searchProduct was created...":1.629,"addToCart was created...":4.721,"closeApp was created...":0.15
+"openApp was created...":0.652,"registration was created...":2.801,"loginIncorrectPW was created...":3.279,"loginBlankPW was created...":1.317,"loginUnregisteredEmail was created...":2.632,"loginBlankEmail was created...":1.255,"searchProduct was created...":1.963,"addToCart was created...":5.037,"closeApp was created...":0.178
 };
 </script>
 <div class="row">
