--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6da36b">  <td>24/02/19 10:17:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LumaFashion.addToCart()[pri:7, instance:com.test.exec.LumaFashion@94f6bfb]">addToCart</td> 
-  <td>main@1806378373</td>   <td></td> </tr>
-<tr bgcolor="6da36b">  <td>24/02/19 10:17:17</td>   <td>-3140</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LumaFashion.loginBlankEmail()[pri:5, instance:com.test.exec.LumaFashion@94f6bfb]">loginBlankEmail</td> 
-  <td>main@1806378373</td>   <td></td> </tr>
-<tr bgcolor="6da36b">  <td>24/02/19 10:17:13</td>   <td>-6983</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LumaFashion.loginBlankPW()[pri:3, instance:com.test.exec.LumaFashion@94f6bfb]">loginBlankPW</td> 
-  <td>main@1806378373</td>   <td></td> </tr>
-<tr bgcolor="6da36b">  <td>24/02/19 10:17:11</td>   <td>-9626</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LumaFashion.loginIncorrectPW()[pri:2, instance:com.test.exec.LumaFashion@94f6bfb]">loginIncorrectPW</td> 
-  <td>main@1806378373</td>   <td></td> </tr>
-<tr bgcolor="6da36b">  <td>24/02/19 10:17:14</td>   <td>-5883</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LumaFashion.loginUnregisteredEmail()[pri:4, instance:com.test.exec.LumaFashion@94f6bfb]">loginUnregisteredEmail</td> 
-  <td>main@1806378373</td>   <td></td> </tr>
-<tr bgcolor="6da36b">  <td>24/02/19 10:17:06</td>   <td>-13972</td> <td title="&gt;&gt;LumaFashion.openApp()[pri:0, instance:com.test.exec.LumaFashion@94f6bfb]">&gt;&gt;openApp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1806378373</td>   <td></td> </tr>
-<tr bgcolor="6da36b">  <td>24/02/19 10:17:09</td>   <td>-11653</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LumaFashion.openApp()[pri:0, instance:com.test.exec.LumaFashion@94f6bfb]">openApp</td> 
-  <td>main@1806378373</td>   <td></td> </tr>
-<tr bgcolor="6da36b">  <td>24/02/19 10:17:09</td>   <td>-11107</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LumaFashion.registration()[pri:1, instance:com.test.exec.LumaFashion@94f6bfb]">registration</td> 
-  <td>main@1806378373</td>   <td></td> </tr>
-<tr bgcolor="6da36b">  <td>24/02/19 10:17:18</td>   <td>-1939</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LumaFashion.searchProduct()[pri:6, instance:com.test.exec.LumaFashion@94f6bfb]">searchProduct</td> 
-  <td>main@1806378373</td>   <td></td> </tr>
+<tr bgcolor="6da36b">  <td>24/03/15 22:31:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LumaFashion.addToCart()[pri:7, instance:com.test.exec.LumaFashion@5cc69cfe]">addToCart</td> 
+  <td>main@2052489518</td>   <td></td> </tr>
+<tr bgcolor="6da36b">  <td>24/03/15 22:31:32</td>   <td>5039</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LumaFashion.closeApp()[pri:8, instance:com.test.exec.LumaFashion@5cc69cfe]">closeApp</td> 
+  <td>main@2052489518</td>   <td></td> </tr>
+<tr bgcolor="6da36b">  <td>24/03/15 22:31:24</td>   <td>-3231</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LumaFashion.loginBlankEmail()[pri:5, instance:com.test.exec.LumaFashion@5cc69cfe]">loginBlankEmail</td> 
+  <td>main@2052489518</td>   <td></td> </tr>
+<tr bgcolor="6da36b">  <td>24/03/15 22:31:20</td>   <td>-7183</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LumaFashion.loginBlankPW()[pri:3, instance:com.test.exec.LumaFashion@5cc69cfe]">loginBlankPW</td> 
+  <td>main@2052489518</td>   <td></td> </tr>
+<tr bgcolor="6da36b">  <td>24/03/15 22:31:17</td>   <td>-10467</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LumaFashion.loginIncorrectPW()[pri:2, instance:com.test.exec.LumaFashion@5cc69cfe]">loginIncorrectPW</td> 
+  <td>main@2052489518</td>   <td></td> </tr>
+<tr bgcolor="6da36b">  <td>24/03/15 22:31:21</td>   <td>-5866</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LumaFashion.loginUnregisteredEmail()[pri:4, instance:com.test.exec.LumaFashion@5cc69cfe]">loginUnregisteredEmail</td> 
+  <td>main@2052489518</td>   <td></td> </tr>
+<tr bgcolor="6da36b">  <td>24/03/15 22:31:10</td>   <td>-16928</td> <td title="&gt;&gt;LumaFashion.openApp()[pri:0, instance:com.test.exec.LumaFashion@5cc69cfe]">&gt;&gt;openApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2052489518</td>   <td></td> </tr>
+<tr bgcolor="6da36b">  <td>24/03/15 22:31:13</td>   <td>-13933</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LumaFashion.openApp()[pri:0, instance:com.test.exec.LumaFashion@5cc69cfe]">openApp</td> 
+  <td>main@2052489518</td>   <td></td> </tr>
+<tr bgcolor="6da36b">  <td>24/03/15 22:31:14</td>   <td>-13269</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LumaFashion.registration()[pri:1, instance:com.test.exec.LumaFashion@5cc69cfe]">registration</td> 
+  <td>main@2052489518</td>   <td></td> </tr>
+<tr bgcolor="6da36b">  <td>24/03/15 22:31:25</td>   <td>-1968</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LumaFashion.searchProduct()[pri:6, instance:com.test.exec.LumaFashion@5cc69cfe]">searchProduct</td> 
+  <td>main@2052489518</td>   <td></td> </tr>
 </table>
